mimir/ing-nginx-mimir.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mimir-nginx
  namespace: mimir-system
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: mimir-nginx.fck8slab.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mimir-nginx
            port:
              name: http-metric
